# split-etna

./: .gitignore  BUGS.md  README.etna.md  TASKS.md  cabal.project  etna.toml
etna/: etna-runner.cabal
etna/app/: Main.hs
etna/src/Etna/: Properties.hs  Witnesses.hs
etna/src/Etna/Gens/: Falsify.hs  Hedgehog.hs  QuickCheck.hs  SmallCheck.hs
etna/test/: Witnesses.hs
patches/: drop_final_blank_empty_list_6da4473_1.patch  unintercalate_inverse_82edf4e_1.patch
src/Data/List/Split/: Internals.hs
